<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <url>https://github.com/laravieira/Willy</url>

  <groupId>me.laravieira</groupId>
  <artifactId>willy</artifactId>
  <version>0.15.0</version>
  <packaging>jar</packaging>

  <name>Willy</name>
  <description>A cute discord bot</description>

  <properties>
  	<maven.compiler.source>17</maven.compiler.source>
  	<maven.compiler.target>17</maven.compiler.target>
	<project.java.version>17</project.java.version>
	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <source>17</source>
          <target>17</target>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <archive>
                <manifest>
                  <mainClass>me.laravieira.willy.Willy</mainClass>
                </manifest>
              </archive>
              <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
              </descriptorRefs>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  
  <repositories>
    <repository>
      <id>jcentral-bitly</id>
      <name>Bitly Repository</name>
      <url>https://jcenter.bintray.com</url>
    </repository>
  	<repository>
      <id>maven-lavaplayer</id>
  	  <name>Lava Player Repository</name>
  	  <url>https://m2.dv8tion.net/releases</url>
  	</repository>
  	<repository>
      <id>jitpack.io</id>
      <name>Youtube Downloader and Whatsapp Repository</name>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>sonatype-public</id>
      <name>SnakeYAML repository</name>
      <url>https://oss.sonatype.org/content/groups/public/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <!-- https://search.maven.org/artifact/com.google.code.gson/gson/2.8.8/jar -->
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.8.9</version>
    </dependency>
    <dependency>
      <!-- https://github.com/sealedtx/java-youtube-downloader -->
      <groupId>com.github.sealedtx</groupId>
      <artifactId>java-youtube-downloader</artifactId>
      <version>3.0.1</version>
    </dependency>
    <dependency>
      <!-- https://github.com/stackmagic/bitly-api-client -->
      <groupId>net.swisstech</groupId>
      <artifactId>bitly-api-client</artifactId>
      <version>0.8.0</version>
      <exclusions>
      	<exclusion>
      		<groupId>com.google.code.gson</groupId>
      		<artifactId>gson</artifactId>
      	</exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
    </dependency>
    <dependency>
      <groupId>org.snakeyaml</groupId>
      <artifactId>snakeyaml-engine</artifactId>
      <version>2.3</version>
    </dependency>
    <dependency>
      <!-- https://github.com/pengrad/java-telegram-bot-api -->
      <groupId>com.github.pengrad</groupId>
      <artifactId>java-telegram-bot-api</artifactId>
      <version>6.0.1</version>
    </dependency>
    <dependency>
      <!-- https://github.com/Auties00/WhatsappWeb4j -->
      <groupId>com.github.auties00</groupId>
      <artifactId>whatsappweb4j</artifactId>
      <version>3.0-RC1</version>
      <!--version>2.2.7</version-->
    </dependency>
    <dependency>
      <!-- https://github.com/Discord4J/Discord4J -->
      <groupId>com.discord4j</groupId>
      <artifactId>discord4j-core</artifactId>
      <version>3.2.2</version>
    </dependency>
    <dependency>
      <!-- https://github.com/sedmelluq/lavaplayer -->
      <groupId>com.sedmelluq</groupId>
      <artifactId>lavaplayer</artifactId>
      <version>1.3.78</version>
    </dependency>
    <dependency>
      <!-- https://mvnrepository.com/artifact/com.ibm.watson/assistant -->
      <groupId>com.ibm.watson</groupId>
      <artifactId>assistant</artifactId>
      <version>10.0.1</version>
      <exclusions>
        <exclusion>
          <groupId>com.google.code.gson</groupId>
          <artifactId>gson</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
      <!-- https://mvnrepository.com/artifact/com.theokanning.openai-gpt3-java/api -->
      <dependency>
        <groupId>com.theokanning.openai-gpt3-java</groupId>
        <artifactId>client</artifactId>
        <version>0.6.0</version>
      </dependency>
  </dependencies>
  <dependencyManagement>
    <dependencies>

      <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-core</artifactId>
        <version>2.13.0-rc2</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>2.13.0-rc2</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-datatype-jdk8</artifactId>
        <version>2.13.0-rc2</version>
      </dependency>

    </dependencies>
  </dependencyManagement>
</project>
